# vscode-cuda-cmake

./: CMakeLists.txt  README.md  cuda-tutorial.code-workspace
src/: CMakeLists.txt  main.cpp
src/cuda/: square.cu
